# vlad

./: ChangeLog  Makefile  Makefile.in  README  VERSION  config.h.in  configure  configure.ac  rules.mk
common/: Makefile  Makefile.in  list.cpp  list.h  numberlist.cpp  numberlist.h  stringlist.cpp  stringlist.h  vlad.h
docs/: bnf.txt  bnf_agent.txt  bnf_operations.txt  bnf_policy.txt  bnf_program.txt  bnf_query.txt  langspecs.txt
kb/: Makefile.in  atom.cpp  atom.h  atomlist.cpp  atomlist.h  consttab.cpp  consttab.h  expression.cpp  expression.h  identifier.cpp  identifier.h  kb.cpp  kb.h  querytab.cpp  querytab.h  sequence.cpp  sequence.h  symtab.cpp  symtab.h  transtab.cpp  transtab.h  wrapper.cpp  wrapper.h
lib/: Makefile.in  atom.cpp  atom.h  config.h.in  consttab.cpp  consttab.h  expression.cpp  expression.h  fact.cpp  fact.h  identifier.cpp  identifier.h  inttab.cpp  inttab.h  kb.cpp  kb.h  list.cpp  list.h  mapper.cpp  mapper.h  mem.cpp  mem.h  numberlist.cpp  numberlist.h  polbase.cpp  polbase.h  rel.cpp  rel.h  rlist.cpp  rlist.h  seqtab.cpp  seqtab.h  smwrap.cpp  smwrap.h  stringlist.cpp  stringlist.h  stringlistlist.cpp  stringlistlist.h  symtab.cpp  symtab.h  (+11 more)
main/: Makefile  Makefile.in  agent.l  agent.y  operation.l  operation.y  parser.h  policy.l  policy.y  program.l  program.y  vlad.cpp
parser/: Makefile.in  operation.l  operation.y  parser.h  parser.y  program.l  program.y  query.l  query.y  scanner.l
project/epilog/: ChangeLog  Makefile  README  TODO  VERSION
project/gauss/: gauss.c  testfile
project/lparse/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.Windows  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  setup.bat
project/lparse/examples/: color1.lp  color2.lp
project/lparse/m4/: Makefile.am  Makefile.in  ts_cxx.m4
project/lparse/src/: Makefile.Win  Makefile.am  Makefile.in  array.cc  array.h  debug.cc  debug.h  defines.h  error.cc  error.h  extern.cc  extern.h  global.h  graph.cc  graph.h  instance.cc  instance.h  iterate.cc  iterate.h  lex.cc  lex.ll  library.cc  library.h  list.cc  list.h  literal.cc  literal.h  main.cc  parse.cc  parse.h  parse.yy  parsetree.cc  parsetree.h  predicate.cc  predicate.h  priority.cc  priority.h  rule.cc  rule.h  sm_smodels.cc  (+8 more)
project/lparse/tests/: Makefile.am  Makefile.in  hashing.lp  t1.lp  t10.lp  t11.lp  t12.lp  t13.lp  t14.lp  t15.lp  t16.lp  t17.lp  t18.lp  t2.lp  t20.lp  t21.lp  t22.lp  t23.lp  t24.lp  t25.lp  t26.lp  t27.lp  t28.lp  t29.lp  t3.lp  t30.lp  t4.lp  t5.lp  t6.lp  t7.lp  t8.lp  t9.lp  test_all.pl
project/lparse/tests/results/: Makefile  Makefile.am  Makefile.in  hashing.text  t1.smodels.all  t1.smodels.facts  t1.text.all  t1.text.facts  t10.smodels.all  t10.smodels.facts  t10.smodels.none  t10.text.all  t10.text.facts  t10.text.none  t11.smodels.all  t11.smodels.facts  t11.smodels.none  t11.text.all  t11.text.facts  t11.text.none  t12.smodels.all  t12.text.facts  t13.smodels.all  t13.smodels.facts  t13.text.all  t13.text.facts  t14.smodels.all  t14.smodels.facts  t14.smodels.none  t14.text.all  t14.text.facts  t14.text.none  t15.smodels.all  t15.smodels.facts  t15.smodels.none  t15.text.all  t15.text.facts  t15.text.none  t16.smodels.all  t16.smodels.facts  (+112 more)
project/mod_vlad/: ChangeLog  Makefile.in  README  TODO  VERSION  admin.c  admin.h  config.h.in  configure  configure.ac  mod_vlad.c  mod_vlad.h  policy.l  policy.y  proc.c  proc.h  util.c  util.h
project/tribe/: ChangeLog  Makefile  Makefile.in  README  VERSION  configure.ac  list.c  list.h  network.c  network.h  rel.c  rel.h  rules.mk  test.c  tribe.h
project/tribe/docs/: rel.txt
project/tribe/lib/: Makefile.in  clist.c  clist.h  config.h.in  interval.h  iqueue.c  iqueue.h  list.c  list.h  mem.c  mem.h  network.c  network.h  rel.c  rel.h  rlist.c  rlist.h  rqueue.c  rqueue.h  tribe.h
project/tribe/test/: Makefile.in  mem_test.sh  test.c
project/vlad/: ChangeLog  Makefile  Makefile.in  README  VERSION  configure  configure.ac  rules.mk
project/vlad/common/: Makefile.in  list.cpp  list.h  numberlist.cpp  numberlist.h  stringlist.cpp  stringlist.h  vlad.h
project/vlad/docs/: bnf_operations.txt  bnf_policy.txt  bnf_program.txt  langspecs.txt
project/vlad/kb/: Makefile.in  atom.cpp  atom.h  atomlist.cpp  atomlist.h  consttab.cpp  consttab.h  expression.cpp  expression.h  identifier.cpp  identifier.h  kb.cpp  kb.h  querytab.cpp  querytab.h  seqtab.cpp  sequence.cpp  sequence.h  symtab.cpp  symtab.h  transtab.h  wrapper.cpp  wrapper.h
project/vlad/lib/: Makefile.in  atom.cpp  atom.h  config.h.in  consttab.cpp  consttab.h  expression.cpp  expression.h  fact.cpp  fact.h  identifier.cpp  identifier.h  inttab.h  kb.cpp  kb.h  list.cpp  list.h  mapper.cpp  mapper.h  mem.h  numberlist.cpp  numberlist.h  polbase.cpp  polbase.h  rel.cpp  rel.h  rlist.cpp  rlist.h  seqtab.cpp  seqtab.h  smwrap.cpp  smwrap.h  stringlist.cpp  stringlist.h  stringlistlist.cpp  symtab.cpp  symtab.h  tnet.cpp  tnet.h  transtab.cpp  (+8 more)
project/vlad/main/: Makefile.in  agent.l  agent.y  operation.l  operation.y  parser.h  policy.l  policy.y  program.l  program.y  vlad.cpp
project/vlad/parser/: Makefile  Makefile.in  parser.h  parser.y  program.l  program.y  query.y  scanner.l
project/vlad/samples/: atomtest  chinese_wall  chwall.ops  chwall.vla  chwall.vlp  docrel.ops  docrel.vla  docrel.vlp  ground.vlp  test-05.vlp  test-06.vlp  test-09.prg  test-09.vla  test-09.vlp  test-12.ops  test-13.vlp  test-16.vlp
project/vlad/test/: get_averages.sh
samples/: atomtest  chinese_wall  chwall.prg  chwall.vla  chwall.vlp  cwall_operations  cwall_query  docrel.ops  docrel.prg  docrel.vla  docrel.vlp  ground.vla  ground.vlp  test-01.prg  test-01.vla  test-01.vlp  test-02.vlp  test-03.prg  test-03.vla  test-03.vlp  test-04.vlp  test-05.vlp  test-06.prg  test-06.vlp  test-07.prg  test-07.vlp  test-08.vla  test-08.vlp  test-09.vlp  test-10.vla  test-10.vlp  test-11.prg  test-11.vlp  test-12.vlp  test-13.vla  test-13.vlp  test-14.vlp  test-15.vlp  test-17.vla  test-17.vlp
test/: get_averages.sh  mem_test.sh  run_test.sh
(+304 files in other folders)
