dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/array.cc)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(lparse,1.0.11)

dnl Checks for programs.
LF_CONFIGURE_CC
LF_CONFIGURE_CXX
LF_SET_WARNINGS
AC_PROG_YACC
AM_PROG_LEX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h dlfcn.h)
AC_CHECK_LIB(dl, dlsym)
AC_MSG_CHECKING(whether P = NP)
AC_MSG_RESULT(no)
AC_PATH_PROG(PERL, perl)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM
AC_C_INLINE
TS_CPP_EXCEPTIONS

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strtol)
AC_SIZEOF_TYPE(int)
AC_SIZEOF_TYPE(long)
AC_OUTPUT(Makefile \
          src/Makefile \
          tests/Makefile \
          m4/Makefile)

