
EXTRA_DIST = \
t1.smodels.all     t13.text.all       t18.smodels.facts  t5.text.facts \
t1.smodels.facts   t13.text.facts     t18.smodels.none   t5.text.none  \
t1.smodels.none    t13.text.none      t18.text.all       t6.smodels.all \
t1.text.all        t14.smodels.all    t18.text.facts     t6.smodels.facts \
t1.text.facts      t14.smodels.facts  t18.text.none      t6.smodels.none \
t1.text.facts~     t14.smodels.none   t19.text           t6.text.all\
t1.text.none       t14.text.all       t2.smodels.all     t6.text.facts \
t10.smodels.all    t14.text.facts     t2.smodels.facts   t6.text.none \
t10.smodels.facts  t14.text.none      t2.smodels.none    t7.smodels.all \
t10.smodels.none   t15.smodels.all    t2.text.all        t7.smodels.facts \
t10.text.all       t15.smodels.facts  t2.text.facts      t7.smodels.none \
t10.text.facts     t15.smodels.none   t2.text.none       t7.text.all \
t10.text.none      t15.text.all       t3.smodels.all     t7.text.facts \
t11.smodels.all    t15.text.facts     t3.smodels.facts   t7.text.none \
t11.smodels.facts  t15.text.none      t3.smodels.none    t8.smodels.all \
t11.smodels.none   t16.smodels.all    t3.text.all        t8.smodels.facts \
t11.text.all       t16.smodels.facts  t3.text.facts      t8.smodels.none \
t11.text.facts     t16.smodels.none   t3.text.none       t8.text.all \
t11.text.none      t16.text.all       t4.smodels.all     t8.text.facts \
t12.smodels.all    t16.text.facts     t4.smodels.facts   t8.text.none \
t12.smodels.facts  t16.text.none      t4.smodels.none    t9.smodels.all \
t12.smodels.none   t17.smodels.all    t4.text.all        t9.smodels.facts \
t12.text.all       t17.smodels.facts  t4.text.facts      t9.smodels.none \
t12.text.facts     t17.smodels.none   t4.text.none       t9.text.all \
t12.text.none      t17.text.all       t5.smodels.all     t9.text.facts \
t13.smodels.all    t17.text.facts     t5.smodels.facts   t9.text.none \
t13.smodels.facts  t17.text.none      t5.smodels.none \
t13.smodels.none   t18.smodels.all    t5.text.all
